--- a/jeremyoberg2/index.html
+++ b/jeremyoberg2/index.html
@@ -9,8 +9,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?522">
-	<link rel="stylesheet" type="text/css" href="style.css?2306">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7318">
+	<link rel="stylesheet" type="text/css" href="style.css?3207">
 	
     <title>Home</title>
 
@@ -40,7 +40,7 @@
 			</div>
 			<div class="col-12">
 				<h2 class="mg-md">
-					Feature Title
+					This is a test
 				</h2>
 				<p>
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
@@ -62,8 +62,8 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?3071"></script>
-<script src="./js/blocs.min.js?4158"></script>
+<script src="./js/bootstrap.bundle.min.js?9431"></script>
+<script src="./js/blocs.min.js?6755"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
