--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonical" href="www.jeremyoberg2.me/">
 	<meta name="robots" content="index, follow">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/PNG" href="favicon.PNG">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1239">
-	<link rel="stylesheet" type="text/css" href="style.css?3099">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9828">
+	<link rel="stylesheet" type="text/css" href="style.css?6023">
 	
     <title>Home</title>
 
@@ -36,7 +36,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-4 text-start">
-				<a href="./" class="a-btn a-block navbar-logo mt-lg-1 mt-md-1">Company</a>
+				<a href="./" class="a-btn a-block navbar-logo mt-lg-1 mt-md-1">Oberg Writing<br></a>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 col-4 text-start">
 				<nav class="navbar navbar-light row navbar-expand-md flex-column pt-0 pb-0">
@@ -85,7 +85,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-12">
-				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/placeholder-image-wide.webp"><img src="img/lazyload-ph.png" data-src="img/placeholder-image-wide.png" class="img-fluid mx-auto d-block lazyload" alt="placeholder image wide" width="1140" height="475"></picture>
+				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/placeholder-image-wide.webp"><img src="img/lazyload-ph.png" data-src="img/placeholder-image-wide.png" class="img-fluid mx-auto d-block lazyload " alt="placeholder image wide" width="1140" height="475"></picture>
 			</div>
 			<div class="col-12">
 				<h2 class="mg-md">
@@ -111,8 +111,8 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?4423"></script>
-<script src="./js/blocs.min.js?888"></script>
+<script src="./js/bootstrap.bundle.min.js?4642"></script>
+<script src="./js/blocs.min.js?2913"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
