--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/PNG" href="favicon.PNG">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6700">
-	<link rel="stylesheet" type="text/css" href="style.css?4769">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7103">
+	<link rel="stylesheet" type="text/css" href="style.css?6579">
 	
     <title>Home</title>
 
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc l-bloc" id="bloc-0">
+<div class="bloc l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-4 text-start">
@@ -51,6 +51,9 @@
 									</li>
 									<li class="nav-item">
 										<a href="./about/" class="nav-link">About</a>
+									</li>
+									<li class="nav-item">
+										<a href="./blog/" class="a-btn nav-link">Blog</a>
 									</li>
 								</ul>
 							</div>
@@ -85,7 +88,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-12">
-				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/placeholder-image-wide.webp"><img src="img/lazyload-ph.png" data-src="img/placeholder-image-wide.png" class="img-fluid mx-auto d-block lazyload " alt="placeholder image wide" width="1140" height="475"></picture>
+				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/placeholder-image-wide.webp"><img src="img/lazyload-ph.png" data-src="img/placeholder-image-wide.png" class="img-fluid mx-auto d-block lazyload" alt="placeholder image wide" width="1140" height="475"></picture>
 			</div>
 			<div class="col-12">
 				<h2 class="mg-md">
@@ -111,8 +114,8 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?3929"></script>
-<script src="./js/blocs.min.js?4284"></script>
+<script src="./js/bootstrap.bundle.min.js?3901"></script>
+<script src="./js/blocs.min.js?39"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
